hphp/hack/test/typecheck/nonnull/void_is_not_subtype_of_nonnull.php
<?hh // strict

function f(): void {}

function g(): nonnull {
  return f();
}
